--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,42 @@
         </dependency>
         <!-- FILE PARSING !-->
 
+        <!-- GUI/TUI TERMINAL !-->
+        <dependency>
+            <groupId>de.codeshelf.consoleui</groupId>
+            <artifactId>consoleui</artifactId>
+            <version>0.0.13</version>
+        </dependency>
+        <!-- GUI/TUI TERMINAL !-->
 
     </dependencies>
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <archive>
+                                <manifest>
+                                    <mainClass>github.cli.app.GithubCLIMain</mainClass>
+                                </manifest>
+                            </archive>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
